--- a/views/partials/patternSection.mustache
+++ b/views/partials/patternSection.mustache
@@ -1,12 +1,11 @@
-<div id="{{ patternPartial }}" class="sg-pattern">
-  <div class="sg-pattern-head">
-    <h3 class="sg-pattern-title">
-      <a href="../../patterns/{{ patternLink }}" class="patternLink" data-patternpartial="{{ patternPartial }}" title="Link to Pattern">
-          {{ patternName }}
-          {{# patternState }}
-            <span class="sg-pattern-state {{ . }}">{{ . }}</span>
-          {{/ patternState }}
-      </a>
+<section id="{{ patternPartial }}" class="styles">
+  <div class="section-header">
+    <h1 class="pull-left">
+      {{ patternType }}
+      {{ patternName }}
+      {{# patternState }}
+        <span class="sg-pattern-state {{ . }}">{{ . }}</span>
+      {{/ patternState }}
     </h3>
     <div class="sg-pattern-breadcrumb">{{ patternBreadcrumb }}</div>
     <a href="#" data-patternpartial="{{ patternPartial }}" title="View Pattern Info" id="sg-pattern-extra-toggle-{{patternPartial}}" class="sg-pattern-extra-toggle"><span>&#9660;</span></a>
@@ -20,4 +19,4 @@
   <script type="text/json" id="sg-pattern-data-{{patternPartial}}" class="sg-pattern-data">
     {{{ patternData }}}
   </script>
-</div><!--end .sg-pattern-->
+</section><!--end .sg-pattern-->
