--- a/views/partials/patternSection.mustache
+++ b/views/partials/patternSection.mustache
@@ -1,7 +1,7 @@
 <section id="{{ patternPartial }}" class="styles">
   <div class="section-header">
     <h1 class="pull-left">
-      {{ patternType }}
+      {{ patternBreadcrumb.patternSubtype }}
       {{ patternName }}
       {{# patternState }}
         <span class="sg-pattern-state {{ . }}">{{ . }}</span>
