--- a/views/viewall.mustache
+++ b/views/viewall.mustache
@@ -1,5 +1,5 @@
 <!-- View All Patterns in a Pattern Sub-Type -->
-<div class="sg-main" role="main">
+<main class="sg-main content" role="main">
   
   <!-- Patterns -->
   <div id="sg-patterns">
