--- a/views/viewall.mustache
+++ b/views/viewall.mustache
@@ -6,6 +6,9 @@
     {{# partials }}
       {{# patternSectionSubtype }}
         {{> patternSectionSubtype }}
+        <script type="text/json" id="sg-pattern-data-{{patternSectionSubtype}}" class="sg-pattern-data">
+          {{{ patternSectionSubtype }}}
+        </script>
       {{/ patternSectionSubtype }}
       {{^ patternSectionSubtype }}
         {{> patternSection }}
