--- a/views/viewall.mustache
+++ b/views/viewall.mustache
@@ -8,10 +8,8 @@
         {{> patternSectionSubtype }}
       {{/ patternSectionSubtype }}
       {{^ patternSectionSubtype }}
+        {{ patternSectionSubtype }}
         {{> patternSection }}
-        <script type="text/javascript">
-          {{{patternSection}}}
-        </script>
       {{/ patternSectionSubtype }}
     {{/ partials }}
   </div> <!--end #sg-patterns-->
