--- a/views/partials/patternSection.mustache
+++ b/views/partials/patternSection.mustache
@@ -1,4 +1,5 @@
 <section id="{{ patternPartial }}" class="styles">
+  {{ patternData.patternBreadcrumb.patternSubtype }}
   <div class="section-label">{{ patternName }}</div>
   <div class="sg-pattern-example">
     {{{ patternPartialCode }}}
