--- a/views/partials/patternSection.mustache
+++ b/views/partials/patternSection.mustache
@@ -1,5 +1,6 @@
 <section id="{{ patternPartial }}" class="styles">
-  {{ patternData.patternBreadcrumb.patternSubtype }}
+  <pre>{{{ patternData }}}</pre>
+  <h1>{{patternSubtype}}</h1>
   <div class="section-label">{{ patternName }}</div>
   <div class="sg-pattern-example">
     {{{ patternPartialCode }}}
