--- a/views/partials/patternSection.mustache
+++ b/views/partials/patternSection.mustache
@@ -1,6 +1,10 @@
 <section id="{{ patternPartial }}" class="styles">
-  <pre>{{{ patternData }}}</pre>
-  <h1>{{patternSubtype}}</h1>
+  <code>{{{ patternData }}}</code>
+  <h1>{{ patternSubtype }}</h1>
+  <h1>{{ patternBreadcrumb }}</h1>
+  <h1>{{ patternBreadcrumb.patternSubtype }}</h1>
+  <h1>{{ patternData.patternBreadcrumb.patternSubtype }}</h1>
+  <h1>{{# patternData }} {{ patternBreadcrumb.patternSubtype }} {{/ patternData }}</h1>
   <div class="section-label">{{ patternName }}</div>
   <div class="sg-pattern-example">
     {{{ patternPartialCode }}}
