--- a/views/partials/patternSection.mustache
+++ b/views/partials/patternSection.mustache
@@ -1,5 +1,5 @@
 <section id="{{ patternPartial }}" class="styles">
-  <h1>{{# patternData }} {{{ patternBreadcrumb }}} {{/ patternData }}</h1>
+  <h1>{{# patternData }} {{ patternBreadcrumb[0] }} {{/ patternData }}</h1>
   <div class="section-label">{{ patternName }}</div>
   <div class="sg-pattern-example">
     {{{ patternPartialCode }}}
