--- a/views/partials/patternSection.mustache
+++ b/views/partials/patternSection.mustache
@@ -1,5 +1,5 @@
 <section id="{{ patternPartial }}" class="styles">
-  {{# patternBreadcrumb }}{{ . }}{{/ patternBreadcrumb}}
+  {{# patternData.patternBreadcrumb }}{{ . }}{{/ patternData.patternBreadcrumb}}
   <div class="section-label">{{ patternName }}</div>
   <div class="sg-pattern-example">
     {{{ patternPartialCode }}}
