--- a/views/partials/patternSection.mustache
+++ b/views/partials/patternSection.mustache
@@ -1,6 +1,5 @@
 <section id="{{ patternPartial }}" class="styles">
-  {{# patternData.patternBreadcrumb }}{{ . }}{{/ patternData.patternBreadcrumb}}
-  <div class="section-label">{{ patternName }}</div>
+  <div class="section-label">{{ patternName }} {{ patternSubtype }}</div>
   <div class="sg-pattern-example">
     {{{ patternPartialCode }}}
   </div>
