--- a/views/viewall.mustache
+++ b/views/viewall.mustache
@@ -8,6 +8,7 @@
         {{> patternSectionSubtype }}
       {{/ patternSectionSubtype }}
       {{^ patternSectionSubtype }}
+        {{> patternSectionSubtype }}
         {{> patternSection }}
       {{/ patternSectionSubtype }}
     {{/ partials }}
