--- a/views/partials/patternSection.mustache
+++ b/views/partials/patternSection.mustache
@@ -1,5 +1,5 @@
 <section id="{{ patternPartial }}" class="styles">
-  <div class="section-label">{{ patternName }} {{ patternSubtype }}</div>
+  <div class="section-label">{{ patternName }}</div>
   <div class="sg-pattern-example">
     {{{ patternPartialCode }}}
   </div>
