--- a/views/partials/patternSection.mustache
+++ b/views/partials/patternSection.mustache
@@ -1,5 +1,6 @@
 <section id="{{ patternPartial }}" class="styles">
   <div class="section-label">{{ patternName }}</div>
+  {{ patternDescription }}
   <div class="sg-pattern-example">
     {{{ patternPartialCode }}}
   </div>
