--- a/views/partials/patternSection.mustache
+++ b/views/partials/patternSection.mustache
@@ -1,6 +1,6 @@
 <section id="{{ patternPartial }}" class="styles">
   <div class="section-label">{{ patternName }}</div>
-  {{ patternDescription }}
+  {{ patternDesc }}
   <div class="sg-pattern-example">
     {{{ patternPartialCode }}}
   </div>
