--- a/views/partials/patternSection.mustache
+++ b/views/partials/patternSection.mustache
@@ -1,6 +1,8 @@
 <section id="{{ patternPartial }}" class="styles">
   <div class="section-label">{{ patternName }}</div>
   {{ patternDesc }}
+  {{ patternBreadcrumb }}
+  {{ patternSubtype }}
   <div class="sg-pattern-example">
     {{{ patternPartialCode }}}
   </div>
