--- a/views/partials/patternSection.mustache
+++ b/views/partials/patternSection.mustache
@@ -1,8 +1,8 @@
 <section id="{{ patternPartial }}" class="styles">
   <div class="section-label">{{ patternName }}</div>
-  {{ patternDesc }}
+  {{ patternData.patternDesc }}
   {{ patternBreadcrumb }}
-  {{ patternSubtype }}
+  {{ patternBreadcrumb.patternSubtype }}
   <div class="sg-pattern-example">
     {{{ patternPartialCode }}}
   </div>
