--- a/views/partials/patternSection.mustache
+++ b/views/partials/patternSection.mustache
@@ -4,7 +4,7 @@
   <div class="section-label">{{ patternSubtype }}</div>
   <div class="section-label">{{# patternBreadcrumb }}{{ patternSubtype }}{{/ patternBreadcrumb }}</div>
   <div class="section-label">{{# patternBreadcrumb }}{{ patternType }}{{/ patternBreadcrumb }}</div>
-  <div class="section-label">{{# patternData }}{{# patternBreadcrumb }}{{ patternType }}{{/ patternBreadcrumb }}{{// patternData }}</div>
+  <div class="section-label">{{# patternData }}{{# patternBreadcrumb }}{{ patternType }}{{/ patternBreadcrumb }}{{/ patternData }}</div>
   <div class="sg-pattern-example">
     {{{ patternPartialCode }}}
   </div>
