--- a/views/viewall.mustache
+++ b/views/viewall.mustache
@@ -9,7 +9,7 @@
       {{/ patternSectionSubtype }}
       {{^ patternSectionSubtype }}
         <script type="text/javascript">
-          {{{patternSectionSubtype}}}
+          {{{patternSection}}}
         </script>
         {{> patternSection }}
       {{/ patternSectionSubtype }}
