--- a/views/partials/patternSection.mustache
+++ b/views/partials/patternSection.mustache
@@ -4,6 +4,7 @@
     {{{ patternPartialCode }}}
   </div>
   <script type="text/json" id="sg-pattern-data-{{patternPartial}}" class="sg-pattern-data">
-    {{ patternData.patternBreadcrumb }}
+    {{{ patternData.patternBreadcrumb }}}
+    var data = {{{patternData}}};
   </script>
 </section><!--end .sg-pattern-->
