--- a/views/partials/patternSection.mustache
+++ b/views/partials/patternSection.mustache
@@ -1,4 +1,4 @@
-{{ patternData.patternBreadcrumb.patternSubtype }}
+{{ patternSubtype }}
 <section id="{{ patternPartial }}" class="styles">
   <div class="section-label">{{ patternName }}</div>
   <div class="sg-pattern-example">
