--- a/views/partials/patternSection.mustache
+++ b/views/partials/patternSection.mustache
@@ -5,6 +5,6 @@
     {{{ patternPartialCode }}}
   </div>
   <script type="text/json" id="sg-pattern-data-{{patternPartial}}" class="sg-pattern-data">
-    {{{ patternData }}}
+    {{{ patternData.patternBreadcrumb }}}
   </script>
 </section><!--end .sg-pattern-->
