--- a/views/viewall.mustache
+++ b/views/viewall.mustache
@@ -4,6 +4,7 @@
   <!-- Patterns -->
   <div id="sg-patterns">
     {{# partials }}
+      {{ patternSectionType }}
       {{# patternSectionSubtype }}
         {{> patternSectionSubtype }}
       {{/ patternSectionSubtype }}
